--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
   <meta property="twitter:description" content="Find out the country of origin of the product you are buying.">
   <meta property="twitter:image" content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
-  <link rel="apple-touch-icon" sizes="57x57" href="IMG/favicons.ico">
-  <link rel="apple-touch-icon" sizes="60x60" href="IMG/favicons.ico/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="IMG/favicons.ico/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="IMG/favicons.ico/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="IMG/favicons.ico/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="IMG/favicons.ico/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="IMG/favicons.ico/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="IMG/favicons.ico/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="IMG/favicons.ico/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="IMG/favicons.ico/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="IMG/favicons.ico/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="IMG/favicons.ico/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="IMG/favicons.ico/favicon-16x16.png">
-  <link rel="manifest" href="IMG/favicons.ico/manifest.json">
+  <link rel="apple-touch-icon" sizes="57x57" href="img/favicons.ico">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/favicons.ico/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/favicons.ico/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/favicons.ico/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/favicons.ico/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/favicons.ico/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/favicons.ico/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/favicons.ico/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favicons.ico/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="img/favicons.ico/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicons.ico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/favicons.ico/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicons.ico/favicon-16x16.png">
+  <link rel="manifest" href="img/favicons.ico/manifest.json">
   <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="img/ms-icon-144x144.png">
   <meta name="theme-color" content="#ffffff">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
